--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -24,3 +24,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  batch:
+    job:
+      enabled: false
+    jdbc:
+      initialize-schema: never
+  cache.type: NONE
