--- a/docker/.env
+++ b/docker/.env
@@ -13,3 +13,10 @@ DB_PASSWORD=folio_admin
 KAFKA_HOST=kafka
 KAFKA_PORT=9092
 ENV=dev
+S3_REGION=eu-west-1
+S3_ACCESS_KEY_ID=access
+S3_SECRET_ACCESS_KEY=secret12
+S3_URL=http://minio-marc-migrations:9000/
+RECORDS_CHUNK_SIZE=10
+CHUNK_FETCH_IDS_COUNT=20
+CHUNK_PERSIST_COUNT=50
