MODMARCMIG-17 Prepare chunks of MARC Bibs for mapping

--- a/src/main/resources/swagger.api/marc-migrations.yaml
+++ b/src/main/resources/swagger.api/marc-migrations.yaml
@@ -243,6 +243,7 @@ components:
       enum:
         - authority
         - instance
+        - holdings
 
     OperationType:
       description: Type of migration
