[MODMARCMIG-19] Extend the data saving service to save re-mapped Instances

--- a/src/main/resources/swagger.api/schemas/bulkResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/bulkResponse.yaml
@@ -1,8 +1,8 @@
-description: Bulk authorities create response
+description: Bulk create response
 type: object
 properties:
   errorRecordsFileName:
-    description: File name of error authorities
+    description: File name of error entities
     type: string
   errorsFileName:
     description: File name of error details
