--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -71,6 +71,8 @@ folio:
     accessKey: ${S3_ACCESS_KEY_ID:}
     secretKey: ${S3_SECRET_ACCESS_KEY:}
     awsSdk: ${S3_IS_AWS:false}
+    retryCount: ${S3_RETRY_COUNT:3}
+    retryDelayMs: ${S3_RETRY_DELAY_MS:500}
 
 management:
   endpoints:
