build: expose environment variable for disabling system user creation
Closes: MODMARCMIG-26

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,6 +47,7 @@ folio:
   environment: ${ENV:folio}
   okapi-url: ${OKAPI_URL:http://localhost:9130}
   system-user:
+    enabled: ${SYSTEM_USER_ENABLED:true}
     username: ${SYSTEM_USER_USERNAME:mod-marc-migrations}
     password: ${SYSTEM_USER_PASSWORD}
     lastname: MARC Migrations
