--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,6 +65,7 @@ folio:
     chunk-fetch-ids-count: ${CHUNK_FETCH_IDS_COUNT:500}
     chunk-persist-count: ${CHUNK_PERSIST_COUNT:1000}
     chunk-processing-max-parallelism: ${CHUNK_PROCESSING_MAX_PARALLELISM:4}
+    local-file-storage-path: ${LOCAL_FILE_STORAGE_PATH:job}
   remote-storage:
     endpoint: ${S3_URL:http://localhost:9000/}
     region: ${S3_REGION:}
