--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-marc-migrations</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <description>Module for high-performance migration of MARC records</description>
   <packaging>jar</packaging>
 
@@ -26,10 +26,10 @@
       src/main/java/org/folio/marc/migrations/MarcMigrationsApplication.java
     </sonar.exclusions>
 
-    <folio-spring-support.version>8.2.0</folio-spring-support.version>
-    <folio-s3-client.version>2.2.0</folio-s3-client.version>
-    <aws-sdk-java.version>2.29.1</aws-sdk-java.version>
-    <di-core.version>4.3.0</di-core.version>
+    <folio-spring-support.version>8.3.0-SNAPSHOT</folio-spring-support.version>
+    <data-import-processing-core.version>4.4.0-SNAPSHOT</data-import-processing-core.version>
+    <folio-s3-client.version>2.3.0-SNAPSHOT</folio-s3-client.version>
+    <aws-sdk-java.version>2.29.4</aws-sdk-java.version>
     <mapstruct.version>1.6.2</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
 
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>${di-core.version}</version>
+      <version>${data-import-processing-core.version}</version>
     </dependency>
 
     <dependency>
