--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-marc-migrations</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <description>Module for high-performance migration of MARC records</description>
   <packaging>jar</packaging>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <marc-migrations.yaml.file>${project.basedir}/src/main/resources/swagger.api/marc-migrations.yaml</marc-migrations.yaml.file>
@@ -26,14 +26,12 @@
       src/main/java/org/folio/marc/migrations/MarcMigrationsApplication.java
     </sonar.exclusions>
 
-    <folio-spring-support.version>8.3.0-SNAPSHOT</folio-spring-support.version>
+    <folio-spring-support.version>9.0.0-SNAPSHOT</folio-spring-support.version>
     <data-import-processing-core.version>4.4.0-SNAPSHOT</data-import-processing-core.version>
     <folio-s3-client.version>2.3.0-SNAPSHOT</folio-s3-client.version>
     <aws-sdk-java.version>2.30.21</aws-sdk-java.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
-
-    <testcontainers.version>1.20.4</testcontainers.version>
 
     <checkstyle.version>10.21.2</checkstyle.version>
     <maven-openapi-generator-plugin.version>7.11.0</maven-openapi-generator-plugin.version>
@@ -44,18 +42,6 @@
     <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
     <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
   </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>testcontainers-bom</artifactId>
-        <version>${testcontainers.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -155,24 +141,6 @@
       <version>${folio-spring-support.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>postgresql</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
 
@@ -213,6 +181,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <release>${java.version}</release>
+          <compilerArgument>-proc:full</compilerArgument>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -242,32 +211,13 @@
       </plugin>
 
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>${build-helper-maven-plugin.version}</version>
-        <executions>
-          <execution>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${project.build.directory}/generated-sources/annotations</source>
-                <source>${project.build.directory}/generated-sources/src/main/java</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
         <version>${maven-openapi-generator-plugin.version}</version>
         <executions>
           <execution>
-            <id>records-editor</id>
+            <phase>generate-sources</phase>
+            <id>generate-api</id>
             <goals>
               <goal>generate</goal>
             </goals>
@@ -296,14 +246,24 @@
               </configOptions>
             </configuration>
           </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>${build-helper-maven-plugin.version}</version>
+        <executions>
           <execution>
+            <phase>generate-sources</phase>
             <goals>
-              <goal>generate</goal>
+              <goal>add-source</goal>
             </goals>
             <configuration>
-              <inputSpec>${marc-migrations.yaml.file}</inputSpec>
-              <output>${project.build.directory}/docs/mod-marc-migrations</output>
-              <generatorName>html2</generatorName>
+              <sources>
+                <source>${project.build.directory}/generated-sources/annotations</source>
+                <source>${project.build.directory}/generated-sources/src/main/java</source>
+              </sources>
             </configuration>
           </execution>
         </executions>
