--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 
     <folio-spring-support.version>9.0.0</folio-spring-support.version>
     <data-import-processing-core.version>4.4.0</data-import-processing-core.version>
-    <folio-s3-client.version>2.3.0-SNAPSHOT</folio-s3-client.version>
-    <aws-sdk-java.version>2.30.36</aws-sdk-java.version>
+    <folio-s3-client.version>2.3.0</folio-s3-client.version>
+    <aws-sdk-java.version>2.30.38</aws-sdk-java.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
 
