--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-marc-migrations</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.1.0-SNAPSHOT</version>
   <description>Module for high-performance migration of MARC records</description>
   <packaging>jar</packaging>
 
@@ -26,9 +26,9 @@
       src/main/java/org/folio/marc/migrations/MarcMigrationsApplication.java
     </sonar.exclusions>
 
-    <folio-spring-support.version>9.0.0</folio-spring-support.version>
-    <data-import-processing-core.version>4.4.0</data-import-processing-core.version>
-    <folio-s3-client.version>2.3.0</folio-s3-client.version>
+    <folio-spring-support.version>10.0.0-SNAPSHOT</folio-spring-support.version>
+    <data-import-processing-core.version>4.5.0-SNAPSHOT</data-import-processing-core.version>
+    <folio-s3-client.version>2.4.0-SNAPSHOT</folio-s3-client.version>
     <aws-sdk-java.version>2.30.38</aws-sdk-java.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
@@ -400,7 +400,7 @@
     <url>https://github.com/folio-org/${project.artifactId}</url>
     <connection>scm:git:git://github.com/folio-org/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/${project.artifactId}.git</developerConnection>
-    <tag>release/v2.0</tag>
+    <tag>release/v2.4</tag>
   </scm>
 
   <repositories>
